# wiki-entity-summarization-preprocessor

./: .gitignore  README.md  compose.yaml  config-files-generator.sh  missing_data_correction.py  missing_data_pages.csv  pom.xml  pyproject.toml  requirements.txt  sqlite-to-page-migration.load  summary_processor.py
commons/: storage.py  utils.py  wiki_entity.py  wiki_mapping.py
wiki-storage/: pom.xml
wiki-storage/src/main/java/com/github/msorkhpar/wikistorage/config/: Neo4jConfig.java
wiki-storage/src/main/resources/: wikidata_predicates_continue.tsv  wikipedia_predicates.tsv
wiki-storage/src/main/resources/db/migration/: V2__init_subjects.sql  V3__init_predicates.sql  V4__init_wikipedia_pages.sql  V6__rename_and_alter_mapping.sql  V7__add_column_processed_wikipedia_pages.sql
wiki_summary/: Dockerfile  summary_builder.py  summary_processor.py
wikidata-graph-builder/: Dockerfile  HELP.md  README.md  pom.xml
wikidata-graph-builder/src/main/java/com/github/msorkhpar/graphbuilder/: WikidataGraphBuilderApplication.java
wikidata-graph-builder/src/main/java/com/github/msorkhpar/wikistorage/: WikidataGraphBuilderApplication.java
wikidata-graph-builder/src/main/resources/: application-local.yml  application.yml
wikipedia-page-extractor/: .gitignore  Dockerfile  README.md  pom.xml
wikipedia-page-extractor/src/main/java/com/github/msorkhpar/pageextextractor/: WikipediaPageExtractorApplication.java
wikipedia-page-extractor/src/main/resources/: application-local.yml  application.yml
(+33 files in other folders)
